# a14-nethunter-kernel

./: .config  .config.old  .gitignore  .missing-syscalls.d  Kconfig  Makefile  README.md  build.config.erd3830_tuv_mr  build_kernel.sh  buildnoavb.sh  buildnoavbp.sh
.thinlto-cache/: llvmcache-00BC9B358EED62E0878AEB464D478D5DC99D5A9E  llvmcache-00EB04D850CE7188D126E959097184800B649547  llvmcache-017D24C80B560699452F7ECD99DF9F7C465D2DE9  llvmcache-0233B49C391D85F3444852137FEC8A6429E2E6D7  llvmcache-0285AFB62ED00A27D338E15C075CDE98C447EB4D  llvmcache-02E0853B42DEBDA352A25EFFC2CACD7A3C724E39  llvmcache-0336CDCDED2CF23281CC149316778BEEAE2EA4AF  llvmcache-04C4521BDF4D88E2FCB9875883027415DA5DB809  llvmcache-04F59EF5D137062FF0B07696947AE82CF355F984  llvmcache-051CB67BE2B368A4BD3C636915862D83E49E6848  llvmcache-05221C668CD0BC0324D63965B12D9FF63D67DB08  llvmcache-05BBF878119670C554015B7AF75616372F394464  llvmcache-067835143EEC03232B0FBA1E1C895D03912DAFF2  llvmcache-06C004A400DFC4852D0BFB0C2DC0EEF2A40A1425  llvmcache-0719F0E22B43DFADEF69B0FBA5632CE5BA12B915  llvmcache-0730E26FAADD65F3415E1F1D523A86EBCC21942D  llvmcache-07BFE89323F4C99CABDC037C345766ADABE0A012  llvmcache-082F658E537374D6A3F77E11177CD93EB2AFE6E3  llvmcache-0947C3E001217E503854F3C5DC22AC5A3FA1760C  llvmcache-09520356DAA1D3CABBA6D99FA864946F45921633  llvmcache-09A85CDAC0053D67FDD6093DAE512710F4A762CE  llvmcache-0B93AE02BCC8D43621284047B5B01A7D4BF0A4EE  llvmcache-0BD8CC91576A4709E3AEF4584D6180FDB61E9EC9  llvmcache-0C126FBC6F2ED9B5473C2D8160506B3B6144E847  llvmcache-0D56FC0A95AF70EBB12E9B181E0FD24FBB05709C  llvmcache-0DAED2BFEC41C116BCDEBF92698C1964A9DFA494  llvmcache-0DDAF47A7070078B80FCE073760DC8F590F0338A  llvmcache-0EC89DE5E2F85D3D5F6C9C851733CE6ECF4E9C56  llvmcache-0F5DA319771EB915196970481B6278CBF8DBD86E  llvmcache-0F6835711D72E11377054402B58E5C93FD667FAD  llvmcache-0FF62C3C087B7B0A1BDAF0EAACF92350A768D538  llvmcache-1015496DCCD216020C5F539057599EDA26CD08DD  llvmcache-1016E4A93A0D2644D38850E20502051C6A62D8A7  llvmcache-10567C3BE36FABC73C596CDB16F1FB70A34EC4C5  llvmcache-10635A604734371292B654925EA6CAFC64957BDC  llvmcache-110E128F9CCD788CB5CFD7B2D3F4BBDF93791C7C  llvmcache-118D14770157F1227B8712C203127C1A74F13D38  llvmcache-11D681C823E22B8F0F55FDA7F96ECEC74EF4F7F7  llvmcache-11F1786074B7900383E7C8938DA6719CE37F5028  llvmcache-11F8077F52FB163615EB0C3F689166F50769CBF1  (+543 more)
KernelSU/: .gitignore
block/: .badblocks.o.cmd  .badblocks.o.d  .bfq-cgroup.o.cmd  .bfq-iosched.o.cmd  .bfq-wf2q.o.cmd  .bio.o.cmd  .bio.o.d  .blk-cgroup-rwstat.o.cmd  .blk-cgroup.o.cmd  .blk-cgroup.o.d  .blk-core.o.cmd  .blk-core.o.d  .blk-crypto-fallback.o.cmd  .blk-crypto.o.cmd  .blk-crypto.o.d  .blk-exec.o.cmd  .blk-exec.o.d  .blk-flush.o.cmd  .blk-ioc.o.cmd  .blk-iocost.o.cmd  .blk-ioprio.o.cmd  .blk-lib.o.cmd  .blk-map.o.cmd  .blk-map.o.d  .blk-merge.o.cmd  .blk-merge.o.d  .blk-mq-cpumap.o.cmd  .blk-mq-cpumap.o.d  .blk-mq-debugfs.o.cmd  .blk-mq-debugfs.o.d  .blk-mq-pci.o.cmd  .blk-mq-pci.o.d  .blk-mq-sched.o.cmd  .blk-mq-sched.o.d  .blk-mq-sysfs.o.cmd  .blk-mq-tag.o.cmd  .blk-mq-tag.o.d  .blk-mq-virtio.o.cmd  .blk-mq-virtio.o.d  .blk-mq.o.cmd  (+63 more)
build-tools/: Android.bp  BUILD.bazel  OWNERS  README.md  build-prebuilts.sh  manifest.xml  prebuilt_tool.bzl  update-prebuilts.sh
certs/: .built-in.a.cmd  .common.o.cmd  .system_certificates.o.cmd  .system_keyring.o.cmd  signing_key.pem  signing_key.x509
crypto/: .acompress.o.cmd  .adiantum.o.cmd  .aead.o.cmd  .aead.o.d  .aes_generic.o.cmd  .ahash.o.cmd  .ahash.o.d  .akcipher.o.cmd  .akcipher.o.d  .algapi.o.cmd  .algapi.o.d  .algboss.o.cmd  .ansi_cprng.o.cmd  .api.o.cmd  .api.o.d  .authenc.o.cmd  .authencesn.o.cmd  .blake2b_generic.o.cmd  .built-in.a.cmd  .cbc.o.cmd  .ccm.o.cmd  .chacha20poly1305.o.cmd  .chacha_generic.o.cmd  .cipher.o.cmd  .cipher.o.d  .cmac.o.cmd  .compress.o.cmd  .compress.o.d  .crc32_generic.o.cmd  .crc32c_generic.o.cmd  .crypto_engine.o.cmd  .crypto_null.o.cmd  .crypto_null.o.d  .ctr.o.cmd  .cts.o.cmd  .deflate.o.cmd  .des_generic.o.cmd  .drbg.o.cmd  .ecb.o.cmd  .ecc.o.cmd  (+73 more)
drivers/: Kconfig
fs/: .aio.o.cmd  .aio.o.d  .anon_inodes.o.cmd  .anon_inodes.o.d  .attr.o.cmd  .bad_inode.o.cmd  .binfmt_elf.o.cmd  .binfmt_misc.o.cmd  .binfmt_script.o.cmd  .block_dev.o.cmd  .block_dev.o.d  .buffer.o.cmd  .built-in.a.cmd  .char_dev.o.cmd  .char_dev.o.d  .compat_binfmt_elf.o.cmd  .coredump.o.cmd  .coredump.o.d  .d_path.o.cmd  .d_path.o.d  .dcache.o.cmd  .dcache.o.d  .dcookies.o.cmd  .direct-io.o.cmd  .dlog_hook.o.cmd  .drop_caches.o.cmd  .eventfd.o.cmd  .eventfd.o.d  .eventpoll.o.cmd  .exec.o.cmd  (+99 more)
(+5832 files in other folders)
